<resources>
    <string name="app_name">RecipeFinder</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="recipe_picture">Recipe Picture</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="view">View</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="random_recipe">Random Recipe</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="shopping_list">Shopping List</string>
    <string name="settings">Settings</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_user_details">Change User Details</string>
    <string name="email_label">Email:</string>
    <string name="username_label">Username:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string-array name="categories">
        <item>Beef</item>
        <item>Breakfast</item>
        <item>Chicken</item>
        <item>Dessert</item>
        <item>Goat</item>
        <item>Miscellaneous</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Side</item>
        <item>Starter</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

    <string-array name="areas">
        <item>American</item>
        <item>British</item>
        <item>Canadian</item>
        <item>Chinese</item>
        <item>Croatian</item>
        <item>Dutch</item>
        <item>Egyptian</item>
        <item>Filipino</item>
        <item>French</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Kenyan</item>
        <item>Malaysian</item>
        <item>Mexican</item>
        <item>Moroccan</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Unknown</item>
        <item>Vietnamese</item>
    </string-array>

</resources>