<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:layout_gravity="start"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textSize="15sp"
        android:layout_gravity="start"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="15sp"
        android:layout_gravity="start"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_change_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_user_details" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="16dp" />
</LinearLayout>
